@@ -1,5 +1,11 @@
 CHANGES
 
+20200411        2020-04-11
+
+            * https://github.com/shlomif/Test-PerlTidy/issues/3
+                * Allow to pass extra options to Perl::Tidy::perltidy().
+                * Thanks to @cxw42 for the suggestion!
+
 20190402        2019-04-02
 
             * Fix https://github.com/shlomif/Test-PerlTidy/issues/2
